# frex

./: .gitignore  flake.nix
frex/: Cargo.toml  julia.fs  mandelbrot.fs
frex/src/: colors.rs  fractals.rs  main.rs
