[package]
name = "frex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
arr_macro = "0.1.3"
raylib = "3.7.0"

# [dependencies.raylib]
# version = "4.5.0"
# git = "https://github.com/litten2up/raylib-rs"
# branch = "4.5.0"

[build]
rustflags = [ "-C", "target-feature=-crt-static" ]
